i updated just a few things. just a couple. a few. maybe. and some stuff.

--- a/CiscoToGoHackIT/src/main/webapp/WEB-INF/web.xml
+++ b/CiscoToGoHackIT/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,11 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
 		</init-param>
+			
+	<init-param>
+            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+            <param-value>true</param-value>
+        </init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 		
@@ -29,5 +34,6 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+
 
 </web-app>
