--- a/CiscoToGoHackIT/.classpath
+++ b/CiscoToGoHackIT/.classpath
@@ -32,5 +32,9 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/httpclient-cache-4.2.5.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/httpcore-4.2.4.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/httpmime-4.2.5.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/smsserver-3.5.4.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jsmpp-2.1.0.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jsmpp-examples.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/javax.mail.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
