--- a/HackItOrderMgmtRestProejct/pom.xml
+++ b/HackItOrderMgmtRestProejct/pom.xml
@@ -27,7 +27,7 @@
 	</properties>
 
 	<build>
-		<sourceDirectory>src</sourceDirectory>
+		<sourceDirectory>.</sourceDirectory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
