--- a/HackItOrderMgmtRestProejct/.classpath
+++ b/HackItOrderMgmtRestProejct/.classpath
@@ -7,6 +7,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="srcTest"/>
+	<classpathentry kind="src" path="schemas"/>
+	<classpathentry kind="src" path="xjcsrc"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
