--- a/HackItOrderMgmtRestProejct/pom.xml
+++ b/HackItOrderMgmtRestProejct/pom.xml
@@ -111,5 +111,10 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.3</version>
+		</dependency>
 	</dependencies>
 </project>
